--- a/dacha-project/index.html
+++ b/dacha-project/index.html
@@ -55,11 +55,11 @@
     <div class="menu js-menu">
         <nav class="menu__nav">
             <ul class="menu_list">
-                <li class="menu__item"><a href="#" class="menu__link">Link</a></li>
-                <li class="menu__item"><a href="#" class="menu__link">Link</a></li>
-                <li class="menu__item"><a href="#" class="menu__link">Link</a></li>
-                <li class="menu__item"><a href="#" class="menu__link">Link</a></li>
-                <li class="menu__item"><a href="#" class="menu__link">Link</a></li>
+                <li class="menu__item"><a href="#banner" class="menu__link js-scroll-link">Топ</a></li>
+                <li class="menu__item"><a href="#" class="menu__link js-scroll-link">Link</a></li>
+                <li class="menu__item"><a href="#" class="menu__link js-scroll-link">Link</a></li>
+                <li class="menu__item"><a href="#" class="menu__link js-scroll-link">Link</a></li>
+                <li class="menu__item"><a href="#footer" class="menu__link js-scroll-link">Боттом</a></li>
             </ul>
         </nav>
     </div>
@@ -67,7 +67,7 @@
         <section id="banner" class="banner">
             <div class="container">
                 <div class="banner__body">
-                    <h1 class="section__title">СТРОИМ КАРКАСНЫЕ ДАЧНЫЕ/САДОВЫЕ ДОМИКИ И БАНИ ДО 100 М2 ПО <span class="text_orange">СКАНДИНАВСКОЙ</span> И <span class="text_orange">КАНАДСКОЙ</span> ТЕХНОЛОГИИ ПЛАТФОРМЕННОГО ТИПА С 1998 ГОДА</h1>
+                    <h1 class="section__title">СТРОИМ КАРКАСНЫЕ ДАЧНЫЕ/САДОВЫЕ ДОМИКИ И БАНИ ДО 100 М<sup>2</sup> ПО <span class="text_orange">СКАНДИНАВСКОЙ</span> И <span class="text_orange">КАНАДСКОЙ</span> ТЕХНОЛОГИИ ПЛАТФОРМЕННОГО ТИПА С 1998 ГОДА</h1>
                     <span class="banner__subtitle">- в СПб и Ленинградской области</span>
                     <div class="banner__info">
                         <div class="banner__item">
@@ -91,7 +91,7 @@
         </section>
         <section id="examples" class="examples">
             <div class="container">
-                <h2 class="section__title text_ttu text_tac no-adaptiv"><span class="text_orange">Какие дома</span> мы&nbspстроим</h2>
+                <h2 class="section__title text_ttu text_tac no-adaptiv"><span class="text_orange">Какие дома</span> мы&nbsp;строим?</h2>
                 <div class="examples__container">
                     <div class="example">
                         <img src="./img/example_1.jpg" alt="Пример дома" class="example__img">
@@ -108,13 +108,13 @@
                     <div class="example">
                         <img src="./img/example_3.jpg" alt="Пример дома" class="example__img">
                         <div class="example__body">
-                            <span class="example__text">ГАРАЖИ, БАНИ, БЕСЕДКИ И ПР.</span>
+                            <span class="example__text">ГАРАЖИ, БАНИ, БЕСЕДКИ&nbsp;И ПР.</span>
                         </div>
                     </div>
                     <div class="example">
                         <img src="./img/example_4.jpg" alt="Пример дома" class="example__img">
                         <div class="example__body">
-                            <span class="example__text">ЛЮБЫЕ ДРУГИЕ 1 ЭТ. ДОМА</span>
+                            <span class="example__text">ЛЮБЫЕ ДРУГИЕ 1&nbsp;ЭТ.&nbsp;ДОМА</span>
                         </div>
                     </div>
                 </div>
@@ -167,7 +167,7 @@
                 <div class="about__garantee">
                     <img src="./img/helmet.jpg" alt="Каска" class="about__garantee-img">
                     <div class="about__garantee-body">
-                        <span class="about__garantee-title">ЗА <span class="text_orange">23 ГОДА</span> РАБОТЫ Я САМ ПОСТРОИЛ <span class="text_orange">БОЛЕЕ 200</span> САДОВЫХ И ДАЧНЫХ ДОМОВ, БАНЬ И БЫТОВЫХ ПОМЕЩЕНИЙ, КУРИРОВАЛ СТРОИТЕЛЬСТВО НА БОЛЕЕ ЧЕМ <span class="text_orange">1000 ОБЪЕКТАХ</span></span>
+                        <span class="about__garantee-title">ЗА <span class="text_orange">23 ГОДА</span> РАБОТЫ Я САМ ПОСТРОИЛ <span class="text_orange">БОЛЕЕ 200</span><br>САДОВЫХ И ДАЧНЫХ ДОМОВ, БАНЬ И БЫТОВЫХ ПОМЕЩЕНИЙ, КУРИРОВАЛ СТРОИТЕЛЬСТВО НА БОЛЕЕ ЧЕМ <span class="text_orange">1000 ОБЪЕКТАХ</span></span>
                         <span class="about__garantee-subtitle">- по всей Ленинградской области, в Москве и др регионах РФ</span>
                     </div>
                 </div>
@@ -233,7 +233,7 @@
         <section class="why">
             <img src="./img/tree.jpg" class="why__tree">
             <div class="container">
-                <div class="section__title text_ttu text_tac no-adaptiv"><span class="text_orange">Почему</span> выбирают нас?</div>
+                <div class="section__title text_ttu text_tac no-adaptiv"><span class="text_orange">Почему</span> выбирают&nbsp;нас?</div>
                 <div class="why__container">
                     <div class="why__item">
                         <div class="why__img">
@@ -307,7 +307,7 @@
                 <div class="count__wrap">
                     <h2 class="count__title">ХОТИТЕ УЗНАТЬ, <span class="text_orange">СКОЛЬКО БУДЕТ СТОИТЬ</span>
                         СТРОИТЕЛЬСТВО ДАЧНОГО ДОМА С УЧЕТОМ
-                        ВАШИХ ТРЕБОВАНИЙ И ПОЖЕЛАНИЙ?
+                        ВАШИХ&nbsp;ТРЕБОВАНИЙ И ПОЖЕЛАНИЙ?
                     </h2>
                     <div class="count__body">
                         <span class="count__body-title">Оставьте заявку</span>
@@ -332,8 +332,8 @@
                 <table class="materials__table" cellspacing="0">
                     <tr>
                         <th>Комплектация дом до 16 - 50 кв.м</th>
-                        <th>Каркас под крышу + отделка фасада</th>
-                        <th>Тёплый контур + отделка фасада</th>
+                        <th>Каркас под крышу +&nbsp;отделка фасада</th>
+                        <th>Тёплый контур +&nbsp;отделка фасада</th>
                         <th>Дом с отделкой под ключ</th>
                     </tr>
                     <tr>
@@ -616,7 +616,7 @@
         <section class="error">
             <img src="./img/error_bg.jpg" class="error__bg">
             <div class="container">
-                <h2 class="section__title text_ttu no-adaptiv">ХОТИТЕ ЗАКАЗАТЬ СТРОИТЕЛЬСТВО ДОМА <span class="text_orange">ЕЩЕ ДЕШЕВЛЕ?</span></h2>
+                <h2 class="section__title text_ttu">ХОТИТЕ ЗАКАЗАТЬ СТРОИТЕЛЬСТВО ДОМА <span class="text_orange">ЕЩЕ ДЕШЕВЛЕ?</span></h2>
                 <p class="error__subtitle">– Хорошо, я наглядно покажу, как можно построить дом дешевле, применяя
                     низкокачественные материалы или нарушая технологию. В результате мы сохраним
                     бюджет, но получим при этом <b>ряд проблем.</b></p>
@@ -762,7 +762,7 @@
         </section>
         <section class="advantages">
             <div class="container">
-                <h2 class="section__title text_tac text_ttu no-adaptiv">Плюсы <span class="text_orange">небольших</span> дачных домиков (до 100 м2 ) в 1 этаж</h2>
+                <h2 class="section__title text_tac text_ttu no-adaptiv">Плюсы&nbsp;<span class="text_orange">небольших</span> дачных домиков (до 100 м2 ) в 1 этаж</h2>
                 <div class="advantages__container">
                     <div class="advantage">
                         <img class="advantage__img" src="./img/advantage_1.png" alt="">
@@ -868,7 +868,7 @@
             <div class="container">
                 <div class="reports__wrap">
                     <div class="reports__body">
-                        <h2 class="section__title text_ttu no-adaptiv">Предоставляем <span class="text_orange">фотоотчеты</span> и регулярно выходим на связь</h2>
+                        <h2 class="section__title text_ttu no-adaptiv">Предоставляем <span class="text_orange">фотоотчеты</span> и&nbsp;регулярно выходим на связь</h2>
                         <div class="banner__info">
                             <div class="banner__item">
                                 <img src="./img/icons/camera.svg" alt="Иконка" class="banner__img">
@@ -909,7 +909,7 @@
         </section>
         <section class="correct">
             <div class="container">
-                <h2 class="section__title text_ttu text_tac no-adaptiv"><span class="text_orange">Как выглядит</span> «правильный» каркасный дом в разрезе?</h2>
+                <h2 class="section__title text_ttu text_tac no-adaptiv"><span class="text_orange">Как&nbsp;выглядит</span> «правильный» каркасный дом в разрезе?</h2>
                 <span class="correct__subtitle no-adaptiv">Именно такие дачные дома строит наша команда!</span>
                 <div class="house">
                     <img src="./img/house_1.jpg" alt="Дом" class="house__img">
@@ -1269,7 +1269,7 @@
         </section>
         <section id="projects" class="projects">
             <div class="container">
-                <h2 class="section__title">НАШИ типовые <sapn class="text_orange">проекты</sapn> дачных домов</h2>
+                <h2 class="section__title text_tac no-adaptiv">НАШИ типовые <sapn class="text_orange">проекты</sapn><br>дачных домов</h2>
                 <div class="projects__buttons">
                     <button class="button button_projects" data-index="0">16 - 50 м<sup>2</sup></button>
                     <button class="button button_projects active" data-index="1">50 - 100 м<sup>2</sup></button>
@@ -1621,7 +1621,7 @@
             </div>
         </section>
     </main>
-    <footer class="footer">
+    <footer id="footer" class="footer">
         <div class="container">
             <div class="header__wrap">
                 <div class="logo">
