--- a/dacha-project/index.html
+++ b/dacha-project/index.html
@@ -138,13 +138,13 @@
                         <span class="about__oleg-text"><span>руководитель проекта</span></span>
                     </div>
                     <div class="about__body">
-                        <p class="about__text">Здравствуйте! Меня зовут Самсонов Олег – я строитель, архитектор и конструктор с 23-летним опытом в каркасном строительстве, являюсь индивидуальным предпринимателем и директором компании «Проект-Дача». </p>
-                        <p class="about__text">Уже длительное время занимаюсь строительством, веду свой блог по строительству на YouTube и Вконтакте, где делюсь информацией на тему малоэтажного строительства.</p>
+                        <p class="about__text">Здравствуйте! Меня зовут Самсонов Олег – я строитель, <b>архитектор и конструктор с 23-летним опытом</b> в каркасном строительстве, являюсь индивидуальным предпринимателем и директором компании «Проект-Дача». </p>
+                        <p class="about__text">Уже длительное время занимаюсь строительством, веду свой <b>блог по строительству</b> на YouTube и Вконтакте, где делюсь информацией на тему малоэтажного строительства.</p>
                         <p class="about__text">ОГРНИП 317532100004027<br>ИНН 531301482916</p>
-                        <p class="about__text">За последние 23 года я поработал в 5 крупных компаниях, где занимался контролем качества работ, поставками материалов и проектированием, а также расчетами смет и строительством объектов, поэтому не понаслышке знаю всю строительную «кухню» изнутри и использую это с выгодой для моих клиентов.</p>
-                        <p class="about__text">Моя компания не впечатляет внушительным штатом – состоящая из меня и трех помощников. Всем руковожу лично! Занимаюсь организацией и контролем работ на участке, разрабатываю проект индивидуально под заказчика, принимаю непосредственное участие в строительных работах.</p>
-                        <p class="about__text">За все время успешной работы мы научились чувствовать потребности клиента и создавать лучшие проекты под заданный бюджет и потребности Заказчика. </p>
-                        <p class="about__text">Мы всегда понимаем и слышим заказчика, поэтому любые непонятные ситуации возникают крайне редко и нам удается быстро найти решение, которое будет устраивать в первую очередь нашего клиента.</p>
+                        <p class="about__text">За последние 23 года я поработал в <b>5 крупных компаниях</b>, где занимался контролем качества работ, поставками материалов и проектированием, а также расчетами смет и строительством объектов, поэтому не понаслышке знаю всю строительную «кухню» изнутри и использую это с выгодой для моих клиентов.</p>
+                        <p class="about__text">Моя компания не впечатляет внушительным штатом – состоящая из меня и трех помощников. <b>Всем руковожу лично!</b> Занимаюсь организацией и контролем работ на участке, разрабатываю проект индивидуально под заказчика, принимаю непосредственное участие в строительных работах.</p>
+                        <p class="about__text">За все время успешной работы мы научились чувствовать потребности клиента и создавать <b>лучшие проекты</b> под заданный бюджет и потребности Заказчика. </p>
+                        <p class="about__text">Мы всегда <b>понимаем и слышим</b> заказчика, поэтому любые непонятные ситуации возникают крайне редко и нам удается быстро найти решение, которое будет устраивать в первую очередь нашего клиента.</p>
                     </div>
                     <div class="about__team">
                         <div class="about__member">
@@ -457,6 +457,26 @@
                         <td>+</td>
                     </tr>
                 </table>
+                <button class="materials__download js-download-canadian">
+                    <div class="materials__overlay">
+                        <img src="./img/icons/download.svg" alt="Иконка скачивания" class="materials__icon">
+                        <span class="materials__text">Скачать таблицу канадского каркаса в PDF</span>
+                    </div>
+                </button>
+                <button class="materials__download js-download-scandinavian">
+                    <div class="materials__overlay">
+                        <img src="./img/icons/download.svg" alt="Иконка скачивания" class="materials__icon">
+                        <span class="materials__text">Скачать таблицу скандинавского каркаса в PDF</span>
+                    </div>
+                </button>
+                <div class="materials__bottom">
+                    <div class="materials__tip">
+                        <p class="materials__text">Стоимость строительства под ключ с учетом доставки и сборки материалов, установки утепления, окон и дверей составляет</p>
+                        <span class="materials__text">До 50кв.м - <span class="text_orange">17 тыс. руб. за. м2</span></span>
+                        <span class="materials__text">До 100кв.м - <span class="text_orange">21 тыс. руб. за м2</span></span>
+                    </div>
+                    <button class="projects__open js-table-toggle">Посмотреть материалы для канадского каркаса</button>
+                </div>
                 <table class="materials__table materials__table_hidden" cellspacing="0">
                     <tr>
                         <th>комплектация дом 50 - 100кв.м</th>
@@ -591,26 +611,6 @@
                         <td>+</td>
                     </tr>
                 </table>
-                <button class="materials__download js-download-canadian">
-                    <div class="materials__overlay">
-                        <img src="./img/icons/download.svg" alt="Иконка скачивания" class="materials__icon">
-                        <span class="materials__text">Скачать таблицу канадского каркаса в PDF</span>
-                    </div>
-                </button>
-                <button class="materials__download js-download-scandinavian">
-                    <div class="materials__overlay">
-                        <img src="./img/icons/download.svg" alt="Иконка скачивания" class="materials__icon">
-                        <span class="materials__text">Скачать таблицу скандинавского каркаса в PDF</span>
-                    </div>
-                </button>
-                <div class="materials__bottom">
-                    <div class="materials__tip">
-                        <p class="materials__text">Стоимость строительства под ключ с учетом доставки и сборки материалов, установки утепления, окон и дверей составляет</p>
-                        <span class="materials__text">До 50кв.м - <span class="text_orange">17 тыс. руб. за. м2</span></span>
-                        <span class="materials__text">До 100кв.м - <span class="text_orange">21 тыс. руб. за м2</span></span>
-                    </div>
-                    <button class="projects__open js-table-toggle">Посмотреть материалы для канадского каркаса</button>
-                </div>
             </div>
         </section>
         <section class="error">
@@ -811,7 +811,7 @@
                     </div>
                     <div class="benefit">
                         <span class="benefit__title">Стройматериалы дешевле</span>
-                        <p class="benefit__text">Благодаря партнерским отношениям с поставщиками материалов, все материалызакупаются в СПб по ценам ниже рыночных</p>
+                        <p class="benefit__text">Благодаря партнерским отношениям с поставщиками материалов, все материалы закупаются в СПб по ценам ниже рыночных</p>
                     </div>
                     <div class="benefit">
                         <span class="benefit__title">Стоимость услуг не превышает 40% от материала</span>
