--- a/dacha-project/index.html
+++ b/dacha-project/index.html
@@ -1691,7 +1691,7 @@
             <span class="popup__close js-close-popup"></span>
             <span class="popup__title">Заполните форму и мы перезвоним в течении 5 минут!</span>
             <form class="count__form">
-                <input type="tel" class="count__input" placeholder="Введите номер телефона">
+                <input type="tel" class="count__input" placeholder="Введите номер телефона" required>
                 <input type="hidden" class="count__vidden js-hidden-input" value="">
                 <button type="submit" class="button button_count">Заказать звонок</button>
                 <span class="count__agreement">Нажимая на кнопку, вы соглашаетесь с <a href="./policy.pdf" target="_blank">политикой конфиденциальности</a></span>
@@ -1704,7 +1704,7 @@
             <span class="popup__close js-close-popup"></span>
             <span class="popup__title">Заполните форму и мы перезвоним в течении 15 минут!</span>
             <form class="count__form">
-                <input type="tel" class="count__input" placeholder="Введите номер телефона">
+                <input type="tel" class="count__input" placeholder="Введите номер телефона" required>
                 <input type="hidden" class="count__vidden js-hidden-input" value="">
                 <button type="submit" class="button button_count">Заказать звонок</button>
                 <span class="count__agreement">Нажимая на кнопку, вы соглашаетесь с <a href="./policy.pdf" target="_blank">политикой конфиденциальности</a></span>
@@ -1717,7 +1717,7 @@
             <span class="popup__close js-close-popup"></span>
             <span class="popup__title">Заполните форму и мы ответим на любой Ваш вопрос!</span>
             <form class="count__form">
-                <input name="user_tel" type="tel" class="count__input" placeholder="Введите номер телефона">
+                <input name="user_tel" type="tel" class="count__input" placeholder="Введите номер телефона" required>
                 <textarea name="user_question" rows="3" type="text" class="count__input" placeholder="Ваш вопрос"></textarea>
                 <button type="submit" class="button button_count">Задать вопрос</button>
                 <span class="count__agreement">Нажимая на кнопку, вы соглашаетесь с <a href="./policy.pdf" target="_blank">политикой конфиденциальности</a></span>
