--- a/dacha-project/index.html
+++ b/dacha-project/index.html
@@ -316,7 +316,7 @@
                             Да, и построим конечно же)</span>
                         <form onsubmit="ym(67488328,'reachGoal','project')" class="count__form">
                             <input type="text" class="count__input" placeholder="Введите ваше имя">
-                            <input type="tel" class="count__input" placeholder="Введите номер телефона">
+                            <input type="tel" class="count__input" placeholder="Введите номер телефона" required>
                             <button class="button button_count">ПОЛУЧИТЬ ПРОЕКТ И РАСЧЕТ СТОИМОСТИ</button>
                             <span class="count__agreement">Нажимая на кнопку, вы соглашаетесь с <a href="./policy.pdf" target="_blank">политикой конфиденциальности</a></span>
                         </form>
