--- a/dacha-project/index.html
+++ b/dacha-project/index.html
@@ -316,7 +316,7 @@
                             Да, и построим конечно же)</span>
                         <form onsubmit="ym(67488328,'reachGoal','project')" class="count__form">
                             <input type="text" class="count__input" placeholder="Введите ваше имя">
-                            <input type="tel" class="count__input" placeholder="Введите номер телефона" required>
+                            <input type="tel" name="user_tel" class="count__input" placeholder="Введите номер телефона" required>
                             <button class="button button_count">ПОЛУЧИТЬ ПРОЕКТ И РАСЧЕТ СТОИМОСТИ</button>
                             <span class="count__agreement">Нажимая на кнопку, вы соглашаетесь с <a href="./policy.pdf" target="_blank">политикой конфиденциальности</a></span>
                         </form>
@@ -1691,7 +1691,7 @@
             <span class="popup__close js-close-popup"></span>
             <span class="popup__title">Заполните форму и мы перезвоним в течении 5 минут!</span>
             <form class="count__form">
-                <input type="tel" class="count__input" placeholder="Введите номер телефона" required>
+                <input type="tel" name="user_tel" class="count__input" placeholder="Введите номер телефона" required>
                 <input type="hidden" class="count__vidden js-hidden-input" value="">
                 <button type="submit" class="button button_count">Заказать звонок</button>
                 <span class="count__agreement">Нажимая на кнопку, вы соглашаетесь с <a href="./policy.pdf" target="_blank">политикой конфиденциальности</a></span>
@@ -1704,7 +1704,7 @@
             <span class="popup__close js-close-popup"></span>
             <span class="popup__title">Заполните форму и мы перезвоним в течении 15 минут!</span>
             <form class="count__form">
-                <input type="tel" class="count__input" placeholder="Введите номер телефона" required>
+                <input type="tel" class="count__input" name="user_tel" placeholder="Введите номер телефона" required>
                 <input type="hidden" class="count__vidden js-hidden-input" value="">
                 <button type="submit" class="button button_count">Заказать звонок</button>
                 <span class="count__agreement">Нажимая на кнопку, вы соглашаетесь с <a href="./policy.pdf" target="_blank">политикой конфиденциальности</a></span>
