--- a/dacha-project/index.html
+++ b/dacha-project/index.html
@@ -173,7 +173,7 @@
                     <img src="./img/helmet.jpg" alt="Каска" class="about__garantee-img">
                     <div class="about__garantee-body">
                         <span class="about__garantee-title">ЗА <span class="text_orange">23 ГОДА</span> РАБОТЫ Я САМ ПОСТРОИЛ <span class="text_orange">БОЛЕЕ 200</span><br>САДОВЫХ И ДАЧНЫХ ДОМОВ, БАНЬ И БЫТОВЫХ ПОМЕЩЕНИЙ, КУРИРОВАЛ СТРОИТЕЛЬСТВО НА БОЛЕЕ ЧЕМ <span class="text_orange">1000 ОБЪЕКТАХ</span></span>
-                        <span class="about__garantee-subtitle">- по всей Ленинградской области, в Москве и др регионах РФ</span>
+                        <span class="about__garantee-subtitle">- по всей Ленинградской области, в&nbsp;Москве&nbsp;и&nbsp;др&nbsp;регионах&nbsp;РФ</span>
                     </div>
                 </div>
             </div>
@@ -915,7 +915,7 @@
         <section class="correct">
             <div class="container">
                 <h2 class="section__title text_ttu text_tac no-adaptiv"><span class="text_orange">Как&nbsp;выглядит</span> «правильный» каркасный дом в разрезе?</h2>
-                <span class="correct__subtitle no-adaptiv">Именно такие дачные дома строит наша команда!</span>
+                <span class="correct__subtitle">Именно такие дачные дома строит наша команда!</span>
                 <div class="house">
                     <img src="./img/house_1.jpg" alt="Дом" class="house__img">
                     <div class="house__container">
@@ -1204,7 +1204,7 @@
                             <div class="quiz__page">
                                 <span class="quiz__question">Где находится ваш участок?</span>
                                 <div class="quiz__options">
-                                    <label class="quiz__label">
+                                    <label class="quiz__label quiz__label_text">
                                         <input type="text" name="city" placeholder="Введите ваш город /поселок">
                                     </label>
                                 </div>
